--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,40 +5,35 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- SECTION: Style -->
-		<link rel='stylesheet' href='./css/style.css' type='text/css' media='screen'>
-		<link rel='stylesheet' href='./css/color.css' type='text/css' media='screen'>
+		<link rel='stylesheet' href='/css/style.css' type='text/css' media='screen'>
+		<link rel='stylesheet' href='/css/color.css' type='text/css' media='screen'>
 
 		<!-- SECTION: Font -->
 		<link href="https://fonts.googleapis.com/css2?family=Inconsolata" rel="stylesheet">
 
 		<!-- SECTION: Icons -->
-		<link rel="icon" type="image/x-icon" href="img/icon.png">
+		<link rel="icon" type="image/x-icon" href="/img/icon.png">
 		<script src="https://kit.fontawesome.com/3b830dc2f9.js" crossorigin="anonymous"></script>
 
-		<title>@itsYakub - portfolio</title>
+		<title>{{ page.title }}</title>
 	</head>
 	<body class='colorbg-darkgray'>
 		<div class='page-content colorbg-white'>
 			<!-- SECION: Header -->
 			<div id='header'>
 				<div class='div-left'>
-					<a class='color-darkgray' href='./index.html' target="_blank">@Yakub</a>
+					<a href='/' target="_blank">@Yakub</a>
 				</div>
 				<div class='div-right'>
-					<a class='color-darkgray' id='a-nav' href='./html/about.html' data-toggle="tooltip" data-placement="bottom" title='About Me!' target="_blank"><i class="fa-solid fa-person"></i></a>
-					<a class='color-darkgray' id='a-nav' href='./html/showcase.html' data-toggle="tooltip" data-placement="bottom" title='Project Showcase!' target="_blank"><i class="fa-solid fa-computer"></i></a>
-					<a class='color-darkgray' id='a-nav' href='./html/articles.html' data-toggle="tooltip" data-placement="bottom" title='Articles!' target="_blank"><i class="fa-solid fa-newspaper"></i></a>
+					<a class='color-darkgray' id='a-nav' href='/about/' data-toggle="tooltip" data-placement="bottom" title='About Me!' target="_blank"><i class="fa-solid fa-person"></i></a>
+					<a class='color-darkgray' id='a-nav' href='/showcase/' data-toggle="tooltip" data-placement="bottom" title='Project Showcase!' target="_blank"><i class="fa-solid fa-computer"></i></a>
+					<a class='color-darkgray' id='a-nav' href='/articles/' data-toggle="tooltip" data-placement="bottom" title='Articles!' target="_blank"><i class="fa-solid fa-newspaper"></i></a>
 				</div>
 			</div>
 
 			<!-- SECION: Main -->
 			<div id='content'>
-				<p>Hello, I'm Jakub, alias @Yakub.</p>
-				<p>I'm a 21-years-old developer who's interested in low-level programming.</p>
-				<p>You can read more about me in <a class='color-darkgray' href='./html/about.html' target="_blank">About Me</a> section.</p>
-				<p>Check out <a class='color-darkgray' href='./html/showcase.html' target="_blank">Project Showcase</a> for the projects and tools I've made.</p>
-				<p>Lastly, I like to write some articles which you can check out in <a class='color-darkgray' href='./html/articles.html' target="_blank">Articles</a> section.</p>
-				<p>Have a nice day!</p>
+				{{ content }}
 			</div>
 
 			<!-- SECION: Footer -->
