[ 010 ] Fixed paths to other pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,9 @@
 					<a href='/' target="_blank">@Yakub</a>
 				</div>
 				<div class='div-right'>
-					<a class='color-darkgray' id='a-nav' href='/about/' data-toggle="tooltip" data-placement="bottom" title='About Me!' target="_blank"><i class="fa-solid fa-person"></i></a>
-					<a class='color-darkgray' id='a-nav' href='/showcase/' data-toggle="tooltip" data-placement="bottom" title='Project Showcase!' target="_blank"><i class="fa-solid fa-computer"></i></a>
-					<a class='color-darkgray' id='a-nav' href='/articles/' data-toggle="tooltip" data-placement="bottom" title='Articles!' target="_blank"><i class="fa-solid fa-newspaper"></i></a>
+					<a class='color-darkgray' id='a-nav' href='/about.html' data-toggle="tooltip" data-placement="bottom" title='About Me!' target="_blank"><i class="fa-solid fa-person"></i></a>
+					<a class='color-darkgray' id='a-nav' href='/showcase.html' data-toggle="tooltip" data-placement="bottom" title='Project Showcase!' target="_blank"><i class="fa-solid fa-computer"></i></a>
+					<a class='color-darkgray' id='a-nav' href='/articles.html' data-toggle="tooltip" data-placement="bottom" title='Articles!' target="_blank"><i class="fa-solid fa-newspaper"></i></a>
 				</div>
 			</div>
 
