[ 013 ] Adjusted css styles for desktop and mobile

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<!-- SECTION: Style -->
-		<link rel='stylesheet' href='/css/style.css' type='text/css' media='screen'>
+		<link rel='stylesheet' href='/css/style0.css' type='text/css' media='screen'>
+		<link rel='stylesheet' href='/css/style1.css' type='text/css' media='screen'>
 		<link rel='stylesheet' href='/css/color.css' type='text/css' media='screen'>
 
 		<!-- SECTION: Font -->
@@ -25,9 +26,9 @@
 					<a href='/' target="_blank">@Yakub</a>
 				</div>
 				<div class='div-right'>
-					<a class='color-darkgray' id='a-nav' href='/about.html' data-toggle="tooltip" data-placement="bottom" title='About Me!'><i class="fa-solid fa-person"></i></a>
-					<a class='color-darkgray' id='a-nav' href='/showcase.html' data-toggle="tooltip" data-placement="bottom" title='Project Showcase!'><i class="fa-solid fa-computer"></i></a>
-					<a class='color-darkgray' id='a-nav' href='/articles.html' data-toggle="tooltip" data-placement="bottom" title='Articles!'><i class="fa-solid fa-newspaper"></i></a>
+					<a class='color-darkgray a-nav' href='/about.html' data-toggle="tooltip" data-placement="bottom" title='About Me!'><i class="fa-solid fa-person"></i></a>
+					<a class='color-darkgray a-nav' href='/showcase.html' data-toggle="tooltip" data-placement="bottom" title='Project Showcase!'><i class="fa-solid fa-computer"></i></a>
+					<a class='color-darkgray a-nav' href='/articles.html' data-toggle="tooltip" data-placement="bottom" title='Articles!'><i class="fa-solid fa-newspaper"></i></a>
 				</div>
 			</div>
 
@@ -39,12 +40,12 @@
 			<!-- SECION: Footer -->
 			<!-- TODO(yakub): Put the footer at the bottom of the webpage -->
 			<div class='div-center' id='footer'>
-				<a class='color-gray' id='a-nav' href='https://github.com/itsYakub' target="_blank"><i class="fa-brands fa-github"></i></a>
-				<a class='color-gray' id='a-nav' href='https://gitlab.com/itsYakub' target="_blank"><i class="fa-brands fa-gitlab"></i></a>
-				<a class='color-gray' id='a-nav' href='https://www.linkedin.com/in/jakub-oleksiak-369625329' target="_blank"><i class="fa-brands fa-linkedin"></i></a>
-				<a class='color-gray' id='a-nav' href='https://www.facebook.com/profile.php?id=100017373458550' target="_blank"><i class="fa-brands fa-facebook"></i></a>
-				<a class='color-gray' id='a-nav' href='https://x.com/YakubButOnTwt' target="_blank"><i class="fa-brands fa-twitter"></i></a>
-				<a class='color-gray' id='a-nav' href='https://youtube.com/' target="_blank"><i class="fa-brands fa-youtube"></i></a>
+				<a class='color-gray a-nav' href='https://github.com/itsYakub' target="_blank"><i class="fa-brands fa-github"></i></a>
+				<a class='color-gray a-nav' href='https://gitlab.com/itsYakub' target="_blank"><i class="fa-brands fa-gitlab"></i></a>
+				<a class='color-gray a-nav' href='https://www.linkedin.com/in/jakub-oleksiak-369625329' target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+				<a class='color-gray a-nav' href='https://www.facebook.com/profile.php?id=100017373458550' target="_blank"><i class="fa-brands fa-facebook"></i></a>
+				<a class='color-gray a-nav' href='https://x.com/YakubButOnTwt' target="_blank"><i class="fa-brands fa-twitter"></i></a>
+				<a class='color-gray a-nav' href='https://youtube.com/' target="_blank"><i class="fa-brands fa-youtube"></i></a>
 			</div>
 		</div>
 	</body>
