--- a/css/style0.css
+++ b/css/style0.css
@@ -1,23 +1,4 @@
 /* SECTION:
- *  Variables
- * */
-
-@media only screen and (max-width: 600px) {
-	:root {
-		--text-size: 24px;
-		--padding-size: 24px;
-	}
-}
-
-@media only screen and (min-width: 601px) {
-	:root {
-		--text-size: 32px;
-		--padding-size: 32px;
-	}
-}
-
-
-/* SECTION:
  *  Page Content Elements
  * */
 
@@ -25,41 +6,40 @@ body {
 	overflow: hidden;
 
 	font-family: 'Inconsolata';
-	font-size: var(--text-size);
+	font-size: 1.6em;
 }
 
 .page-content {
-	width: 90vw;
-	height: 90vh;
-	padding: 0px;
-	margin: 5vh auto;
+	margin: 2vh auto;
+	width: 50vw;
+	min-width: 600px;
+	height: 96vh;
 
 	position: relative;
 
- 	box-shadow: 0px 0px 25px 25px #000000ff;
- 	border-radius: var(--text-size);
+ 	box-shadow: 0px 0px 16px 16px #000000ff;
+ 	border-radius: 1.2em;
 
 	animation-name: slideFadeIn;
 	animation-duration: 2s;
 }
 
-#header {
-	width: calc(100% - var(--padding-size) * 2);
-	height: var(--text-size);
-	padding: var(--padding-size);
+#header,
+#footer {
+	padding: 25px;
+	width: calc(100% - 50px);
+	height: 1.6em;
+}
 
+#header {
 	position: absolute;
 	top: 0px;
 	
 	display: flex;
-	justify-content: space-between;
+	vertical-align: center;
 }
 
 #footer {
-	width: calc(100% - var(--padding-size) * 2);
-	height: var(--text-size);
-	padding: var(--padding-size);
-
 	position: absolute;
 	bottom: 0px;
 	
@@ -68,12 +48,12 @@ body {
 }
 
 #content {
-	width: calc(100% - var(--padding-size) * 2);
-	padding: 0px var(--padding-size);
+	padding: 0px 25px;
+	width: calc(100% - 50px);
 
 	position: absolute;
-	top: calc(var(--text-size) + var(--padding-size) * 2);
-	bottom: calc(var(--text-size) + var(--padding-size) * 2);
+	top: calc(1.6em + 50px);
+	bottom: calc(1.6em + 50px);
 
 	overflow-x: hidden;
 	overflow-y: auto;
@@ -87,13 +67,14 @@ body {
  * */
 
 a:link, a:visited {
-	text-decoration: none;
-	font-weight: bold;
+	text-decoration: underline;
+	font-weight: normal;
 
 	color: #444444ff;
 }
 
-#a-nav {
+.a-nav {
+	text-decoration: none;
 	padding: 4px;
 }
 
