--- a/css/style0.css
+++ b/css/style0.css
@@ -5,20 +5,20 @@
 body {
 	overflow: hidden;
 
-	font-family: 'Inconsolata';
-	font-size: 1.6em;
+	font-family: Sans-serif;
+	font-size: 1.0em;
 }
 
 .page-content {
-	margin: 2vh auto;
+	margin: 1vh auto;
 	width: 50vw;
 	min-width: 600px;
-	height: 96vh;
+	height: 98vh;
 
 	position: relative;
 
  	box-shadow: 0px 0px 16px 16px #000000ff;
- 	border-radius: 1.2em;
+ 	border-radius: 0.5em;
 
 	animation-name: slideFadeIn;
 	animation-duration: 2s;
@@ -28,7 +28,7 @@ body {
 #footer {
 	padding: 25px;
 	width: calc(100% - 50px);
-	height: 1.6em;
+	height: calc(1.5em);
 }
 
 #header {
@@ -48,12 +48,12 @@ body {
 }
 
 #content {
-	padding: 0px 25px;
+	padding: 25px;
 	width: calc(100% - 50px);
 
 	position: absolute;
-	top: calc(1.6em + 50px);
-	bottom: calc(1.6em + 50px);
+	top: calc(1.5em + 50px);
+	bottom: calc(1.5em + 50px);
 
 	overflow-x: hidden;
 	overflow-y: auto;
@@ -68,14 +68,15 @@ body {
 
 a:link, a:visited {
 	text-decoration: underline;
-	font-weight: normal;
+	font-weight: bold;
 
 	color: #444444ff;
 }
 
 .a-nav {
+	margin: 0px 8px;
+	font-size: 1.5em;
 	text-decoration: none;
-	padding: 4px;
 }
 
 h1, h2, h3 {
@@ -83,12 +84,30 @@ h1, h2, h3 {
 	margin: 0px;
 }
 
-h1 { color: #222222ff; }
-h2 { color: #444444ff; }
-h3 { color: #888888ff; }
+h1 { font-size: 1.3em; color: #222222ff; }
+h2 { font-size: 1.2em; color: #444444ff; }
+h3 { font-size: 1.2em; color: #888888ff; }
 
 p {
 	color: #444444ff;
+}
+
+pre {
+	margin: 0px auto;
+	padding: 25px 25px;
+	width: 90%;
+	max-width: 90%;
+
+	overflow-x: auto;
+	overflow-y: hidden;
+	
+	font-family: monospace;
+	font-size: 1.0em;
+
+ 	border-radius: 0.5em;
+
+	color: #fafafaff;
+	background: #444444ff;
 }
 
 /* SECTION:
