--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,9 +9,6 @@
 		<link rel='stylesheet' href='/css/style1.css' type='text/css' media='screen'>
 		<link rel='stylesheet' href='/css/color.css' type='text/css' media='screen'>
 
-		<!-- SECTION: Font -->
-		<link href="https://fonts.googleapis.com/css2?family=Inconsolata" rel="stylesheet">
-
 		<!-- SECTION: Icons -->
 		<link rel="icon" type="image/x-icon" href="/img/icon.png">
 		<script src="https://kit.fontawesome.com/3b830dc2f9.js" crossorigin="anonymous"></script>
@@ -23,7 +20,7 @@
 			<!-- SECION: Header -->
 			<div id='header'>
 				<div class='div-left'>
-					<a href='/' target="_blank">@Yakub</a>
+					<a class='a-nav' href='/'>@Yakub</a>
 				</div>
 				<div class='div-right'>
 					<a class='color-darkgray a-nav' href='/about.html' data-toggle="tooltip" data-placement="bottom" title='About Me!'><i class="fa-solid fa-person"></i></a>
