--- a/css/style1.css
+++ b/css/style1.css
@@ -7,19 +7,19 @@
 	body {
 		overflow: hidden;
 
-		font-family: 'Inconsolata';
-		font-size: 1.4em;
+		font-family: Sans-serif;
+		font-size: 1.0em;
 	}
 
 	.page-content {
-		margin: 2vh auto;
-		min-width: 90vw;
-		height: 96vh;
+		margin: 1vh auto;
+		min-width: 96vw;
+		height: 98vh;
 
 		position: relative;
 
-		box-shadow: 0px 0px 8px 8px #000000ff;
-		border-radius: 0.8em;
+		box-shadow: 0px 0px 4px 4px #000000ff;
+		border-radius: 0.5em;
 
 		animation-name: slideFadeIn;
 		animation-duration: 2s;
@@ -29,7 +29,7 @@
 	#footer {
 		padding: 16px;
 		width: calc(100% - 32px);
-		height: 1.4em;
+		height: calc(1.4em);
 	}
 
 
@@ -50,12 +50,12 @@
 	}
 
 	#content {
-		padding: 0px 16px;
+		padding: 16px;
 		width: calc(100% - 32px);
 
 		position: absolute;
-		top: calc(1.6em + 32px);
-		bottom: calc(1.6em + 32px);
+		top: calc(1.4em + 32px);
+		bottom: calc(1.4em + 32px);
 
 		overflow-x: hidden;
 		overflow-y: auto;
@@ -70,14 +70,15 @@
 
 	a:link, a:visited {
 		text-decoration: underline;
-		font-weight: normal;
+		font-weight: bold;
 
 		color: #444444ff;
 	}
 
 	#a-nav {
+		margin: 0px 4px;
 		text-decoration: none;
-		padding: 4px;
+		font-size: 1.4em;
 	}
 
 	h1, h2, h3 {
@@ -85,12 +86,30 @@
 		margin: 0px;
 	}
 
-	h1 { color: #222222ff; }
-	h2 { color: #444444ff; }
-	h3 { color: #888888ff; }
+	h1 { font-size: 1.2em; color: #222222ff; }
+	h2 { font-size: 1.1em; color: #444444ff; }
+	h3 { font-size: 1.1em; color: #888888ff; }
 
 	p {
 		color: #444444ff;
+	}
+
+	pre {
+		font-family: monospace;
+		font-size: 1.0em;
+		
+		margin: 0px auto;
+		padding: 16px;
+		width: 90%;
+		max-width: 90%;
+
+		overflow-x: auto;
+		overflow-y: hidden;
+
+		border-radius: 0.2em;
+
+		color: #fafafaff;
+		background: #444444ff;
 	}
 
 	/* SECTION:
